--- a/doc/org-roam.texi
+++ b/doc/org-roam.texi
@@ -525,9 +525,9 @@ org-roam's templating system works, it may be useful to look into basic usage of
 @samp{org-capture}.
 
 Org-roam's templates can be customized by modifying the variable
-@samp{org-roam-capture-templates}. Just like the base @samp{org-capture} this
-variable can contain multiple templates, in which case you will be prompted on which
-one to use when capturing a new note.
+@samp{org-roam-capture-templates}. Just like the base @samp{org-capture} this variable can
+contain multiple templates, in which case you will be prompted on which one to
+use when capturing a new note.
 
 @menu
 * Template Walkthrough::
@@ -567,9 +567,9 @@ here.
 @samp{:file-name} is the file-name template for a new note, if it doesn't yet
 exist. This creates a file at path that looks like
 @samp{/path/to/org-roam-directory/20200213032037-foo.org}. This template also
-allows you to specify if you want the note to go into a
-subdirectory. e.g. the template @samp{private/$@{slug@}} will create notes in
-@samp{/path/to/org-roam-directory/private}
+allows you to specify if you want the note to go into a subdirectory. For
+example, the template @samp{private/$@{slug@}} will create notes in
+@samp{/path/to/org-roam-directory/private}.
 @item
 @samp{:head} contains the initial template to be inserted (once only), at
 the beginning of the file. Here, the title global attribute is
