--- a/doc/org-roam.org
+++ b/doc/org-roam.org
@@ -777,7 +777,7 @@ This protocol finds or creates a new note with a given ~roam_key~ (see [[*Anatom
 
 [[file:images/roam-ref.gif]]
 
-To use this, create a Firefox bookmarklet as follows:
+To use this, create the following [[https://en.wikipedia.org/wiki/Bookmarklet][bookmarklet]] in your browser:
 
 #+BEGIN_SRC javascript
 javascript:location.href =
