--- a/doc/org-roam.texi
+++ b/doc/org-roam.texi
@@ -1068,7 +1068,7 @@ This protocol finds or creates a new note with a given @code{roam_key} (see @ref
 
 @image{images/roam-ref,,,,gif}
 
-To use this, create a Firefox bookmarklet as follows:
+To use this, create the following @uref{https://en.wikipedia.org/wiki/Bookmarklet, bookmarklet} in your browser:
 
 @example
 javascript:location.href =
