--- a/doc/org-roam.org
+++ b/doc/org-roam.org
@@ -1136,7 +1136,7 @@ tight integration between
     :CUSTOM_ID: spaced-repetition
     :END:
 
-[[https://github.com/l3kn/org-fc/][Org-fc]] is a spaced repetition system that scales well with a large number of
+[[https://www.leonrische.me/fc/index.html][Org-fc]] is a spaced repetition system that scales well with a large number of
 files. Other alternatives include [[https://orgmode.org/worg/org-contrib/org-drill.html][org-drill]], and [[https://github.com/abo-abo/pamparam][pamparam]].
 
 * FAQ
